--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -37,5 +37,8 @@ jobs:
       uses: sonarsource/sonarcloud-github-action@master
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        SONAR_TOKEN: ${{ CI.SONAR_TOKEN }}
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      args:
+        -Dsonar.projectKey=ihor-horovyi_sdlc-playground
+        -Dsonar.organization=github-actions
 
