--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -38,7 +38,8 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-      args:
-        -Dsonar.projectKey=ihor-horovyi_sdlc-playground
-        -Dsonar.organization=github-actions
+      with:
+        args:
+          -Dsonar.projectKey=ihor-horovyi_sdlc-playground
+          -Dsonar.organization=github-actions
 
