--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
 	id 'org.springframework.boot' version '3.1.2'
 	id 'io.spring.dependency-management' version '1.1.2'
 	id 'checkstyle'
+	id("org.sonarqube") version "4.3.0.3225"
 }
 
 group = 'com.example'
