added sonarqube plugin

--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,11 @@ plugins {
 	id 'org.springframework.boot' version '3.1.2'
 	id 'io.spring.dependency-management' version '1.1.2'
 	id 'checkstyle'
+	id 'org.sonarqube' version "4.3.0.3225"
 }
+
+apply plugin: 'checkstyle'
+apply plugin: 'org.sonarqube'
 
 group = 'com.example'
 version = '0.0.1-SNAPSHOT'
@@ -22,8 +26,6 @@ repositories {
 	mavenCentral()
 }
 
-apply plugin: 'checkstyle'
-
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	compileOnly 'org.projectlombok:lombok'
@@ -41,4 +43,11 @@ checkstyle {
 	checkstyleMain.source = './'
 	checkstyleMain.exclude('**/build/**', '**/generated-sources/**')
 	checkstyleMain.include('**/*.java')
+}
+
+sonar {
+	properties {
+		property("sonar.projectKey", "sdlc-playground")
+		property("sonar.organization", "ihor-horovyi")
+	}
 }
