--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -31,11 +31,11 @@ jobs:
     - name: Run tests with Gradle Wrapper
       run: ./gradlew test
 
-    - name: SonarCloud Scan
+    # - name: SonarCloud Scan
     # You may pin to the exact commit or the version.
     # uses: SonarSource/sonarcloud-github-action@4b4d7634dab97dcee0b75763a54a6dc92a9e6bc1
-      uses: sonarsource/sonarcloud-github-action@master
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      # uses: sonarsource/sonarcloud-github-action@master
+      # env:
+        # GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        # SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
