--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -2,6 +2,10 @@ name: Build Gradle project
 
 on:
   push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
+  workflow_dispatch:
 
 jobs:
   build-gradle-project:
@@ -19,23 +23,15 @@ jobs:
     - name: Setup Gradle
       uses: gradle/gradle-build-action@v2
     
-    - name: Run build
+    - name: Build
       run: ./gradlew build -x test -x checkStyleMain -x checkStyleTest
 
-    - name: Run checkStyleMain
+    - name: Check-Style Main
       run: ./gradlew checkStyleMain
 
-    - name: Run checkStyleTest
+    - name: Check-Style Test
       run: ./gradlew checkStyleTest
 
-    - name: Run tests with Gradle Wrapper
+    - name: Unit tests
       run: ./gradlew test
-
-    # - name: SonarCloud Scan
-    # You may pin to the exact commit or the version.
-    # uses: SonarSource/sonarcloud-github-action@4b4d7634dab97dcee0b75763a54a6dc92a9e6bc1
-      # uses: sonarsource/sonarcloud-github-action@master
-      # env:
-        # GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        # SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
